src/objects/UM_PortingRequest__c.object
<CustomObject>
    <fields>
        <fullName>UM_DateTimeOfRequest__c</fullName>
        <label>DateTime Of Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_DateTimeOfResponse__c</fullName>
        <label>Date/Time Of Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_ExternalID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_RequestMessage__c</fullName>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_ResponseMessage__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic (WBCI)</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Porting Request</label>
    <nameField>
        <label>Porting Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Porting Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>